# api/swagger/swagger.json
@@ -15,13 +15,13 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/user/login": {
+        "/auth/login": {
             "post": {
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "description": "用户登录",
-                "operationId": "UserController.登录",
+                "operationId": "AuthController.登录",
                 "parameters": [
                     {
                         "in": "body",
@@ -51,13 +51,13 @@
                 }
             }
         },
-        "/user/register": {
+        "/auth/register": {
             "post": {
                 "tags": [
-                    "user"
+                    "auth"
                 ],
                 "description": "用户注册",
-                "operationId": "UserController.注册",
+                "operationId": "AuthController.注册",
                 "parameters": [
                     {
                         "in": "body",
@@ -86,9 +86,162 @@
                     }
                 }
             }
+        },
+        "/room/create": {
+            "post": {
+                "tags": [
+                    "room"
+                ],
+                "description": "创建房间",
+                "operationId": "WebSocketController.创建房间",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "房间名字",
+                        "schema": {
+                            "$ref": "#/definitions/Room"
+                        }
+                    }
+                ],
+                "responses": {
+                    "helper.SQL_ERROR": {
+                        "description": "{object} helper.RestfulReturn"
+                    },
+                    "helper.SUCCESS": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/helper.RestfulReturn"
+                        }
+                    }
+                }
+            }
+        },
+        "/room/get_room_member": {
+            "post": {
+                "tags": [
+                    "room"
+                ],
+                "description": "获取房间成员",
+                "operationId": "WebSocketController.获取房间成员",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "房间ID",
+                        "schema": {
+                            "$ref": "#/definitions/Room"
+                        }
+                    }
+                ],
+                "responses": {
+                    "helper.SQL_ERROR": {
+                        "description": "{object} helper.RestfulReturn"
+                    },
+                    "helper.SUCCESS": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/helper.RestfulReturn"
+                        }
+                    }
+                }
+            }
+        },
+        "/room/join": {
+            "post": {
+                "tags": [
+                    "room"
+                ],
+                "description": "加入房间",
+                "operationId": "WebSocketController.加入房间",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "房间ID",
+                        "schema": {
+                            "$ref": "#/definitions/Room"
+                        }
+                    }
+                ],
+                "responses": {
+                    "helper.SQL_ERROR": {
+                        "description": "{object} helper.RestfulReturn \"加入失败\""
+                    },
+                    "helper.SUCCESS": {
+                        "description": "\"加入成功\"",
+                        "schema": {
+                            "$ref": "#/definitions/helper.RestfulReturn"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/update_avatar": {
+            "post": {
+                "tags": [
+                    "user"
+                ],
+                "description": "修改头像",
+                "operationId": "UserController.修改头像",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "头像地址",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "helper.SQL_ERROR": {
+                        "description": "{object} helper.RestfulReturn 修改失败"
+                    },
+                    "helper.SUCCESS": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "989.0xc00026b590.false": {
+            "title": "false",
+            "type": "object"
+        },
+        "Room": {
+            "title": "Room",
+            "type": "object"
+        },
+        "helper.RestfulReturn": {
+            "title": "RestfulReturn",
+            "type": "object",
+            "properties": {
+                "Data": {
+                    "$ref": "#/definitions/989.0xc00026b590.false"
+                },
+                "Message": {
+                    "type": "string"
+                },
+                "Result": {
+                    "$ref": "#/definitions/helper.Status"
+                }
+            }
+        },
+        "helper.Status": {
+            "title": "Status",
+            "format": "int64",
+            "type": "integer",
+            "enum": [
+                "SUCCESS = 10000",
+                "SQL_ERROR = 50000"
+            ],
+            "example": 10000
+        },
         "models.User": {
             "title": "User",
             "type": "object",
@@ -98,11 +251,11 @@
                 },
                 "delete_time": {
                     "type": "string",
-                    "format": "string"
+                    "format": "datetime"
                 },
                 "last_login": {
                     "type": "string",
-                    "format": "string"
+                    "format": "datetime"
                 },
                 "name": {
                     "type": "string"
@@ -128,8 +281,16 @@
     },
     "tags": [
         {
+            "name": "auth",
+            "description": "登录注册\n"
+        },
+        {
             "name": "user",
-            "description": "Operations about Api\n"
+            "description": "用户类\n"
+        },
+        {
+            "name": "room",
+            "description": "WebSocketController\n"
         }
     ]
 }
